# Personal-Finance-Tracker

./: FINAL_REPORT.md  LICENSE  README.md
financer/: .gitignore  Cargo.toml
financer/migrations/2025-11-01-155313-0000_create_users/: down.sql  up.sql
financer/migrations/2025-11-20-171528-0000_add_user_to_accounts/: down.sql  up.sql
financer/migrations/2025-11-23-175655-0000_create_budgets/: down.sql  up.sql
financer/migrations/2025-11-23-175657-0000_add_transaction_columns/: down.sql  up.sql
financer/migrations/2025-11-24-065422-0000_add_balance_after_to_transactions/: down.sql  up.sql
financer/migrations/2025-12-14-120000-0000_add_active_to_accounts/: down.sql  up.sql
financer/migrations/2025-12-14-180000-0000_create_recurring_items/: down.sql  up.sql
financer/src/: app.rs  db.rs  finance_calculations.rs  lib.rs  main.rs  models.rs  schema.rs  schemas.rs
financer/tests/: backend_tests.rs  finance_tests.rs
