[package]
name = "financer"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.27"
egui_plot = "0.27"
diesel = { version = "2.3.3", features = ["sqlite"] }
argon2 = "0.5"
password-hash = "0.5"
rand = "0.8"
dotenv = "0.15"
email_address = "0.2"
chrono = { version = "0.4.42", features = ["serde"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
diesel_migrations = "2"
